--- a/theme.css
+++ b/theme.css
@@ -44,3 +44,40 @@ code {
 a {
     text-decoration: none;
 }
+
+.index {
+    position:fixed;
+    border:1px solid #737272;
+    background-color:#e4e4e4;
+    padding:5px;
+    top:10px;
+    right: 10px;
+}
+
+.index-1 {
+    padding-left: 0px;
+}
+
+.index-2 {
+    padding-left: 20px;
+}
+
+.index-3 {
+    padding-left: 40px;
+}
+
+.index-4 {
+    padding-left: 60px;
+}
+
+.index-5 {
+    padding-left: 80px;
+}
+
+.index-6 {
+    padding-left: 80px;
+}
+
+.index-7 {
+    padding-left: 80px;
+}
